## Mikan GStreamer Plugin DLL
## =======================

MESSAGE(STATUS "Generating Mikan GStreamer DLL Project")

file(GLOB MIKAN_GSTREAMER_HEADER
	"${CMAKE_CURRENT_LIST_DIR}/Public/*.h"
)

file(GLOB MIKAN_GSTREAMER_PRIVATE_SRC
	"${CMAKE_CURRENT_LIST_DIR}/Private/*.h"
	"${CMAKE_CURRENT_LIST_DIR}/Private/*.cpp"
)

file(GLOB MIKAN_GSTREAMER_SRC
	${MIKAN_GSTREAMER_HEADER}
	${MIKAN_GSTREAMER_PRIVATE_SRC}
)

source_group("Public" FILES ${MIKAN_GSTREAMER_HEADER})
source_group("Private" FILES ${MIKAN_GSTREAMER_PRIVATE_SRC})

list(APPEND MIKAN_GSTREAMER_INCL_DIRS
	${CMAKE_CURRENT_LIST_DIR}/Public
	${CMAKE_CURRENT_LIST_DIR}/Private
	${CMAKE_CURRENT_LIST_DIR}/../../src/MikanCoreApp/Public
	${GSTREAMER_INCLUDE_DIR}
	${GLIB2_INCLUDE_DIR}
)

list(APPEND MIKAN_GSTREAMER_REQ_LIBS
	${GLIB2_LIBRARIES}
	${GOBJECT_LIBRARIES}
	${GSTREAMER_LIBRARY}
	${GSTREAMER_APP_LIBRARY}
	${GSTREAMER_BASE_LIBRARY}
	${GSTREAMER_VIDEO_LIBRARY}
	MikanCoreAppDll)

add_library(MikanGStreamer SHARED ${MIKAN_GSTREAMER_SRC})
target_include_directories(MikanGStreamer PRIVATE ${MIKAN_GSTREAMER_INCL_DIRS})
target_link_libraries(MikanGStreamer PRIVATE ${MIKAN_GSTREAMER_REQ_LIBS})
set_target_properties(MikanGStreamer PROPERTIES FOLDER Plugins)
set_target_properties(MikanGStreamer PROPERTIES PUBLIC_HEADER "${MIKAN_GSTREAMER_HEADER}")
set_target_properties(MikanGStreamer PROPERTIES CXX_VISIBILITY_PRESET hidden)
target_compile_definitions(MikanGStreamer PRIVATE MIKAN_GSTREAMER_EXPORTS)

# Install - copy runtime dependencies to dist folder (for release)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 

	install(TARGETS MikanGStreamer
		RUNTIME DESTINATION ${MIKAN_ARCH_INSTALL_PATH}
		LIBRARY DESTINATION ${MIKAN_ARCH_INSTALL_PATH}/lib
		ARCHIVE DESTINATION ${MIKAN_ARCH_INSTALL_PATH}/lib
		PUBLIC_HEADER DESTINATION ${MIKAN_ARCH_INSTALL_PATH}/include)

ELSE() #Linux/Darwin
ENDIF()